--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="comtamuka120.httpsgithub.final_project">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/circlelogo"
@@ -17,7 +19,18 @@
             </intent-filter>
         </activity>
         <activity android:name=".registration" />
-        <activity android:name=".blank_test"></activity>
+        <activity
+            android:name=".home_page"
+            android:label="@string/title_activity_home_page"
+            android:theme="@style/Theme.Design.NoActionBar" />
+        <activity
+            android:name=".profile"
+            android:label="@string/title_activity_profile"
+            android:theme="@style/Theme.Design.NoActionBar" />
+        <activity
+            android:name=".game_search"
+            android:label="@string/title_activity_game_search"
+            android:theme="@style/Theme.Design.NoActionBar"></activity>
     </application>
 
 </manifest>
